--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,17 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/serviceWorker.js')
+        .then(registration => {
+          console.log('Registration successful, scope is:', registration.scope);
+        })
+        .catch(error => {
+          console.log('Service worker registration failed, error:', error);
+        })
+      }
+    </script>
   </body>
 </html>
